# Meridian

./: .env.example  .env.test  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_SENIOR.md  SECURITY.md  alembic.ini  pyproject.toml  pytest.ini  run_server.py
.github/workflows/: cd.yml  ci.yml  security.yml
alembic/: alembic.ini  env.py
alembic/versions/: .gitkeep
configs/: base.yaml  dev.yaml  prod.yaml
configs/models/: forecasting.yaml  pricing.yaml  uplift.yaml
deployments/docker/: Dockerfile  Dockerfile.spark  docker-compose.test.yml  docker-compose.yml
deployments/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
deployments/k8s/spark-operator/: .gitkeep
docs/: README_RU.md
docs/api/: openapi.yaml
docs/architecture/adr/: 001-why-fastapi.md  002-database-choice.md  003-causal-inference-lib.md
docs/architecture/diagrams/: c4-container.puml  c4-context.puml
notebooks/eda/: retail_dataset_analysis.ipynb
notebooks/experiments/: causal_discovery.ipynb  demand_forecasting.ipynb  uplift_modeling.ipynb
scripts/: run_migrations.sh  seed_data.py  setup_db.sh
scripts/security/: audit_dependencies.py
src/meridian/: __init__.py  main.py
src/meridian/api/dependencies/: __init__.py  auth.py  db.py  rate_limit.py  security.py  services.py
src/meridian/api/middleware/: audit_log.py  body_limit.py  correlation.py  exception_handler.py  security_headers.py  timing.py
src/meridian/api/routers/: health.py
src/meridian/api/schemas/: __init__.py
src/meridian/application/interfaces/: __init__.py  event_publisher.py  feature_store.py  ml_model.py
src/meridian/application/use_cases/: __init__.py  forecast_demand.py  optimize_price.py  predict_uplift.py  run_ab_test.py
src/meridian/core/: config.py  constants.py  events.py  exceptions.py  logging.py  security.py  tracing.py
src/meridian/domain/models/: customer.py  experiment.py  pricing.py  transaction.py  uplift.py
src/meridian/domain/repositories/: __init__.py  base.py  customer.py  experiment.py  transaction.py
src/meridian/domain/services/: ab_testing.py  attribution.py  causal_discovery.py  experiment_design.py  pricing_optimizer.py  uplift_calculator.py
src/meridian/infrastructure/cache/: __init__.py  redis_cache.py
src/meridian/workers/: __init__.py  celery_app.py
tests/: conftest.py
tests/e2e/: __init__.py  test_scenarios.py
tests/integration/: test_ml_modules.py
tests/integration/test_api/: __init__.py  test_uplift_endpoint.py
tests/integration/test_database/: __init__.py
tests/integration/test_ml/: __init__.py  test_uplift_model.py
tests/security/: __init__.py  test_auth_bypass.py  test_input_validation.py  test_sql_injection.py
tests/security/fuzz/: __init__.py  test_api_fuzzing.py
tests/unit/application/: __init__.py  test_predict_uplift.py
tests/unit/domain/: __init__.py  test_ab_testing.py  test_uplift.py
tests/unit/infrastructure/: __init__.py  test_meta_learners.py  test_security.py
ui/: __init__.py  app.py
(+76 files in other folders)
