[tool.poetry]
name = "meridian"
version = "1.0.0"
description = "Marketing Analytics & Causal Inference Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "meridian", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.25"}
aiosqlite = ">=0.19.0"
alembic = ">=1.13.1"
redis = ">=5.0.1"
celery = {extras = ["redis"], version = ">=5.3.6"}
structlog = ">=24.1.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
cryptography = ">=42.0.0"
httpx = ">=0.26.0"
numpy = ">=1.26.3"
pandas = ">=2.1.4"
scikit-learn = ">=1.4.0"
scipy = ">=1.12.0"
hydra-core = ">=1.3.2"
prometheus-client = ">=0.19.0"
argon2-cffi = "^25.1.0"

[tool.poetry.group.postgres.dependencies]
asyncpg = ">=0.29.0"

[tool.poetry.group.ml.dependencies]
econml = "^0.15.0"
mlflow = "^2.10.0"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4"
pytest-asyncio = ">=0.23.3"
pytest-cov = ">=4.1.0"
httpx = ">=0.26.0"
black = ">=23.12.1"
ruff = ">=0.1.11"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"
bandit = {extras = ["toml"], version = ">=1.7.6"}
safety = ">=2.3.5"

[tool.poetry.group.spark.dependencies]
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
pyarrow = "^14.0.2"

[tool.poetry.group.forecasting.dependencies]
gluonts = "^0.14.3"

[tool.poetry.group.ui.dependencies]
streamlit = "^1.31.0"
plotly = "^5.18.0"
altair = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B017",  # pytest.raises(Exception) is acceptable in tests
    "B023",  # function definition in loop - acceptable for closures
    "B904",  # raise from in except - not always needed
    "E741",  # ambiguous variable name - I for identity matrix is fine
]

[tool.ruff.lint.isort]
known-first-party = ["meridian"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # assert_used

[tool.coverage.run]
source = ["src/meridian"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

